--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -327,7 +327,7 @@ Spatial random effects are the subject of Chapter \@ref(beyond-borders).
 Give equation for a generalised linear mixed model (GLMM) here.
 Describe connection between generalised additive model [GAMs; @wood2017generalized; @hastie1987generalized] and GLMMs.
 
-### Latent Gaussian model
+### Latent Gaussian model {#lgm}
 
 Latent Gaussian models [LGMs; @rue2009approximate] are a class of three-stage Bayesian hierarchical models in which the middle layer is Gaussian.
 To be more precise, in an LGM, the likelihood is given by
@@ -343,7 +343,7 @@ The structured additive predictor $\eta_i$ may include an intercept $\beta_0$, f
 The parameters $\beta_0$, $\{\beta_j\}$, $\{u_k(\cdot)\}$ are each assigned Gaussian prior distributions, and can be collected into a vector $\mathbf{x} \in \mathbb{R}^N$ such that $\mathbf{x} \sim \mathcal{N}(\mathbf{0}, \mathbf{Q}(\boldsymbol{\mathbf{\theta}}_2)^{-1})$ where $\boldsymbol{\mathbf{\theta}}_2 \in \mathbb{R}^{s_2}$ are further hyperparameters, again with $s_2$ assumed small.
 Let $\boldsymbol{\mathbf{\theta}} = (\boldsymbol{\mathbf{\theta}}_1, \boldsymbol{\mathbf{\theta}}_2) \in \mathbb{R}^m$ with $m = s_1 + s_2$ be all hyperparameters, with prior distribution $p(\boldsymbol{\mathbf{\theta}})$.
 
-### Extended latent Gaussian model
+### Extended latent Gaussian model {#elgm}
 
 Extended latent Gaussian models [ELGMs; @stringer2022fast] facilitate modelling of data with greater non-linearities than an LGM.
 In an ELGM, the structured additive predictor is redefined as $\boldsymbol{\mathbf{\eta}} = (\eta_1, \ldots \eta_{N_n})$, where $N_n \in \mathbb{N}$ is a function of $n$, and it is possible that $N_n \neq n$.
